Fix alignment being slightly off on hover

--- a/resources/assets/less/bem/artist-link-button.less
+++ b/resources/assets/less/bem/artist-link-button.less
@@ -64,7 +64,7 @@
   &:hover {
     background: lighten(@gray-blue-darker, 2%);
     .@{_top}__chevron {
-      margin-right: -5px;
+      right: -5px;
     }
   }
 
@@ -85,6 +85,7 @@
   }
 
   &__chevron {
+    right: 0;
     font-size: 14px;
     transition: 0.1s ease-out;
   }
